force-app/main/default/objects/Customer_360__c/Customer_360__c.object-meta.xml
<CustomObject>
    <label>Customer 360</label>
    <nameField>
        <label>Customer 360 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer 360</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>