force-app/main/default/objects/Customer_360__c/fields/Hide_Licenses_in_Webstore__c.field-meta.xml
<CustomField>
    <fullName>Hide_Licenses_in_Webstore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Licenses in Webstore</label>
    <type>Checkbox</type>
</CustomField>