force-app/main/default/objects/Customer_360__c/fields/Latest_Active_Contract_Historical__c.field-meta.xml
<CustomField>
    <fullName>Latest_Active_Contract_Historical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Active Contract Historical</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer 360</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>