force-app/main/default/objects/Customer_360__c/fields/LIC_CM1_ENT_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_CM1_ENT_MUP__c</fullName>
    <description>License for Forward-Facing Dash Camera</description>
    <label>LIC-CM1-ENT-MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>