force-app/main/default/objects/Customer_360__c/fields/LIC_CM_ANLG_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_CM_ANLG_MUP__c</fullName>
    <description>Camera Connector License</description>
    <label>LIC-CM-ANLG-MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>