force-app/main/default/objects/Customer_360__c/fields/LIC_CM_PRO_Discount__c.field-meta.xml
<CustomField>
    <fullName>LIC_CM_PRO_Discount__c</fullName>
    <label>LIC-CM-PRO-Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>