force-app/main/default/objects/Customer_360__c/fields/LIC_FL_APPS_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_FL_APPS_MUP__c</fullName>
    <description>GTMS-29386 : C360 fields for new Licenses for Q3/Q4 Webstore launch</description>
    <label>LIC-FL-APPS MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>