force-app/main/default/objects/Customer_360__c/fields/LIC_MC_R_Discount__c.field-meta.xml
<CustomField>
    <fullName>LIC_MC_R_Discount__c</fullName>
    <description>GTMS-29386 : C360 fields for new Licenses for Q3/Q4 Webstore launch</description>
    <label>LIC-MC-R Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>