force-app/main/default/objects/Customer_360__c/fields/LIC_SC1_MUP__c.field-meta.xml
<CustomField>
    <fullName>LIC_SC1_MUP__c</fullName>
    <label>LIC-SC1 MUP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>