force-app/main/default/objects/Customer_360__c/fields/P_P_Pilot_Customer__c.field-meta.xml
<CustomField>
    <fullName>P_P_Pilot_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-13768 - Validate SKU compatibility to prevent the invalid combo - Renewals</description>
    <inlineHelpText>Identifies the Pilot Customers for P&amp;P Rollout.</inlineHelpText>
    <label>P&amp;P Pilot Customer</label>
    <type>Checkbox</type>
</CustomField>