force-app/main/default/objects/Customer_360__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due in Advance</fullName>
                <label>Due in advance</label>
            </value>
            <value>
                <fullName>Net 5</fullName>
            </value>
            <value>
                <fullName>Net 10</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
                <label>NET 60</label>
            </value>
            <value>
                <fullName>Net 75</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>