force-app/main/default/objects/Customer_360__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <description>Platform Type populates via OpptyLineitemDiscountBatch based on the Products purchased</description>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Tier_Values</valueSetName>
    </valueSet>
</CustomField>