force-app/main/default/objects/Customer_360__c/fields/SOT__c.field-meta.xml
<CustomField>
    <fullName>SOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOT</label>
    <type>Checkbox</type>
</CustomField>