force-app/main/default/objects/Customer_360__c/fields/VG_ENT_Purchased__c.field-meta.xml
<CustomField>
    <fullName>VG_ENT_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VG ENT Purchased</label>
    <type>Checkbox</type>
</CustomField>